more setup file added

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "airbnb",
+  "extends": ["airbnb", "prettier"],
   "rules": {
     "indent": ["error", 2],
     "semi": ["error", "always"],
