--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
-    "styled-components": "^3.1.6"
+    "styled-components": "^3.1.6",
+    "uuid": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
